# URLShortener

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  startup.sh
app/: main.py
app/controller/: analytics_controller.py  api.py  redirect_controller.py  url_controller.py
app/database/: db.py  url_repository.py
app/migrations/: env.py
app/migrations/versions/: add_is_custom_column.py  create_urls_table.py  fca45759e76d_add_soft_delete.py
app/models/: url.py
app/services/: analytics_service.py  url_service.py
performance_tests/: README.md  run_with_inmemory.py  simple_test.js
tests/: README.md  conftest.py  test_url_shortener.py
